# Axiora-Path

./: .gitignore  AGE_RULE_SYSTEM.md  ARCHITECTURE_RISKS.md  AXIORA_PATH_VISUAL_AUDIT.md  AXIORA_SYSTEM_AUDIT.md  COMANDOS_INICIAR_PROJETO.md  CORE_LEARNING_FILES.md  DATA_MODEL.md  EXECUTION_FLOW.md  LEARNING_ARCHITECTURE.md  LESSON_EXECUTION_FLOW.md  Makefile  PROJECT_MAP.md  README.md  SETUP_LOCAL.md  bootstrap_local.ps1  learning_audit.json  learning_audit_report.txt  learning_audit_v2.json  learning_audit_v2_report.txt  learning_audit_v3.json  learning_audit_v3_report.txt  learning_graph.json  package-lock.json  package.json  tmp_lesson_age_runtime_audit.json
apps/api/: .dockerignore  .env.example  .env.production.example  Dockerfile  Dockerfile.worker  README.md  README.ops.axion_health_runner.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py  models.py  models_learning.py  worker.py
apps/api/axiora_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: audit_question_quality.py  bootstrap_learning_retention.py  seed_aprender_content.py  seed_aprender_curriculum_structure.py  seed_axion_message_templates.py  seed_axion_policy_rules.py  seed_path_events.py  seed_platform_admin.py  seed_question_bank_general_subjects.py  seed_question_bank_math_portuguese.py  seed_question_templates_hybrid.py  seed_season_events.py  simulate_daily_missions.py
apps/api/tests/: conftest.py  test_adaptive_learning_diversity.py  test_adaptive_learning_placeholder_guard.py  test_admin_experiment_tenant_isolation.py  test_age_policy.py  (+74 more)
(+702 files in other folders)
