[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiora-api"
version = "0.1.0"
description = "FastAPI skeleton for axiora-path monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "redis>=5.2.1,<6.0.0",
  "argon2-cffi>=23.1.0,<24.0.0",
  "PyJWT>=2.10.1,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4,<1.0.0",
  "mypy>=1.14.1,<2.0.0",
  "pytest>=8.3.4,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
